# julia-set

./: README.hs  julia-set.cabal
