name:                julia-set
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/themattchan/julia-set#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@themattchan.com
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/themattchan/julia-set

library
  hs-source-dirs:      src
  exposed-modules:     JuliaSet
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable julia-set-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , julia-set
  default-language:    Haskell2010

test-suite julia-set-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , julia-set
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

